--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local-mongoose": "^8.0.0",
+    "shortid": "^2.2.16",
     "validator": "^13.9.0"
   }
 }
