--- a/server/package.json
+++ b/server/package.json
@@ -19,12 +19,14 @@
     "express-session": "^1.17.3",
     "mongoose": "^7.0.3",
     "mongoose-findorcreate": "^4.0.0",
+    "node-localstorage": "^2.2.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local-mongoose": "^8.0.0",
     "shortid": "^2.2.16",
+    "store2": "^2.14.2",
     "validator": "^13.9.0"
   }
 }
