--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aphrodite": "^2.4.0",
+    "html-to-image": "^1.11.11",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-animations": "^1.0.0",
